--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ __pycache__/
 
 # Need to find a binary storage solutions for these files
 GoogleWord2VecModel.bin
-sparse_vector_pipeline.pkl
+models/model.pkl
